--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^12.3.0",
     "axios": "^0.21.0",
     "history": "4.10.1",
+    "knex": "^0.21.12",
     "normalize.css": "^8.0.1",
+    "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
