--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "startdev": "nodemon app.js",
+    "dev": "nodemon app.js",
     "start": "node app.js",
-    "migrate": "npx knex migrate:latest"
+    "migrate": "knex migrate:latest"
   },
   "dependencies": {
     "cors": "^2.8.5",
